report issues list implemented disable tree collapse

--- a/app/static/css/reports.css
+++ b/app/static/css/reports.css
@@ -357,3 +357,14 @@ body {
 .url_hyper_link {
     color: #FFFFFF;
 }
+
+.tree li{
+    display: none;
+}
+
+li.level1{
+    display: block;
+}
+li.level2{
+    display: block;
+}
